[package]
name = "fcomptime"
version = "0.1.0"
edition = "2024"

[dependencies]
paste = "*"
fcomptime_macro = { path = "./fcomptime_macro", features = [], optional = true }
tokio = { version = "*", features = ["full"], optional = true }
serde = { version = "*", features = ["derive"] }
serde_json = "*"

[features]
default = ["fcomptime_macro"]
nightly = ["fcomptime_macro/nightly"]
async = ["dep:tokio"]