[package]
name = "fcomptime_macro"
version = "0.1.0"
edition = "2024"

[lib]
proc-macro = true

[dependencies]
quote = "1.0.45"
syn = { version = "2.0.117", features = ["full"] }
proc-macro2 = "*"
streaming-iterator = "0.1.9"
tree-sitter = "0.26.9"
tree-sitter-rust = "0.24.2"
serde_json = "*"

[features]
default = []
nightly = []